--- a/.github/workflows/scheduled-check-settings.yml
+++ b/.github/workflows/scheduled-check-settings.yml
@@ -38,4 +38,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MESSAGE: ${{join(steps.run.outputs.*, '\n')}}
         with:
-          filename: .github/setting-issue.md
+          filename: .github/workflows/setting-issue.md
+
