--- a/.github/workflows/scheduled-check-settings.yml
+++ b/.github/workflows/scheduled-check-settings.yml
@@ -30,7 +30,11 @@ jobs:
         id: run
         continue-on-error: true
         run: |
-          poetry run task check-settings > $GITHUB_OUTPUT
+          {
+            echo 'result<<EOF' >> $GITHUB_OUTPUT
+            poetry run task check-settings > $GITHUB_OUTPUT
+            echo 'EOF' >> $GITHUB_OUTPUT
+          }
 
       - name: create an issue
         if: failure()
