--- a/.github/workflows/scheduled-check-settings.yml
+++ b/.github/workflows/scheduled-check-settings.yml
@@ -31,10 +31,10 @@ jobs:
         continue-on-error: true
         run: |
           {
-            echo 'result<<EOF' >> $GITHUB_OUTPUT
-            poetry run task check-settings > $GITHUB_OUTPUT
-            echo 'EOF' >> $GITHUB_OUTPUT
-          }
+            echo 'result<<EOF'
+            poetry run task check-settings
+            echo 'EOF'
+          } >> $GITHUB_OUTPUT
 
       - name: create an issue
         if: failure()
