--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.11"
 Django = "^4.0"
-
+taskipy = "^1.10.1"
 
 [[tool.poetry.source]]
 name = "nikkei"
