--- a/.github/workflows/scheduled-check-settings.yml
+++ b/.github/workflows/scheduled-check-settings.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   job1:
     name: Update Poetry Library
+    permissions: write-all
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -42,7 +43,6 @@ jobs:
             --title "$TITLE" \
             --body "$BODY")
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           TITLE: Team sync
           BODY: |
