--- a/.github/workflows/scheduled-check-settings.yml
+++ b/.github/workflows/scheduled-check-settings.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           {
             echo 'result<<EOF'
-            poetry run task check-settings
+            poetry run task check-settings || true
             echo 'EOF'
           } >> $GITHUB_OUTPUT
 
